manifests/hello-kubernetes-app-prod-a.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: hello

---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
  namespace: hello
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: hello-kubernetes

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
  namespace: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
      - image: paulbouwer/hello-kubernetes:1.10
        imagePullPolicy: IfNotPresent
        name: "hello"
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hello-gateway
  namespace: hello
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "app.loft.local"

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-ingress
  namespace: hello
spec:
  hosts:
  - "app.loft.local"
  gateways:
  - hello-gateway
  http:
  - route:
    - destination:
        host: hello-kubernetes.hello.svc.cluster.local
        port:
          number: 8080
